--- a/vue/package.json
+++ b/vue/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "laravel-vue-survey",
+  "name": "vue",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -13,8 +13,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
-    "typescript": "^5.5.3",
-    "vite": "^5.4.1",
-    "vue-tsc": "^2.0.29"
+    "vite": "^5.4.1"
   }
 }
