--- a/vue/package.json
+++ b/vue/package.json
@@ -12,6 +12,7 @@
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^1.0.6",
     "@tailwindcss/forms": "^0.5.9",
+    "axios": "^1.7.7",
     "vue": "^3.4.37",
     "vue-router": "^4.0.13",
     "vuex": "^4.1.0"
